fix video overflow

--- a/files/assets/css/orgy.css
+++ b/files/assets/css/orgy.css
@@ -26,7 +26,7 @@ lite-youtube {
 }
 
 #orgy-file-container > * {
-    max-height: 100% !important;
+    max-height: 70vh !important;
 	margin: 0 !important;
     height: 98% !important;
     width: 98% !important;
